--- a/input.css
+++ b/input.css
@@ -3,10 +3,11 @@
 @import 'tailwindcss/utilities';
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 
 @layer base {
   html {
-    font-family: Inter, system-ui, sans-serif;
+    font-family: Inter, Manrope, system-ui, sans-serif;
   }
 }
 
